Navbar related issue and some alignment issue fixed

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -16,7 +16,7 @@ section.container {
     }
 
     .hero-info {
-        margin: 5rem 1.7rem 0rem;
+        padding: 5rem 1rem 0rem 1.7rem;
     }
 }
 
@@ -65,11 +65,20 @@ ul.custom-bullet li::before {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 786px) {
     section.container {
         flex-direction: column;
         padding: 0.5rem 0;
         flex-wrap: wrap;
+
+        .hero-info {
+            margin: 1rem 0 0 3rem;
+            max-width: fit-content;
+        }
+
+        .hero-img {
+            display: none
+        }
     }
 
     ul.custom-bullet {
