--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,7 @@ li a {
   font-size: 1.2rem;
   font-weight: 500;
   color: #7E57C2;
+  text-decoration: none;
 }
 
 /* Change the link color to #111 (black) on hover */
@@ -23,7 +24,6 @@ li a:hover {
 
 li {
   text-align: center;
-  border-bottom: 1px solid #555;
   margin-left: 1rem;
 }
 
@@ -59,14 +59,14 @@ nav.container {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 786px) {
   nav.container {
     flex-direction: column;
     padding: 0.5rem 0;
 
     li {
-
       margin-left: 0;
+      border-bottom: 1px solid #555;
     }
 
     .logo {
@@ -76,17 +76,12 @@ nav.container {
     .hamburger-icon {
       display: inline;
     }
-
-
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-
   li {
     display: inline-block;
-    border-bottom: none;
-
   }
 }
