--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -6,17 +6,18 @@
     padding: 10px;
     border-radius: 10px;
     font-size: 1.2rem;
+    border: 2px solid #9575CD;
 
     img {
         width: 100%;
         height: auto;
         display: block;
-        border-radius: 10px;
     }
 
     div.left-img-cont {
         flex-grow: 1;
         max-width: 100%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     div.right-info-cont {
@@ -26,15 +27,11 @@
     /* Global Styles */
     ul {
         list-style-type: none;
-        /* Remove default bullet points */
         padding: 0;
-        /* Remove default padding */
     }
 
-    /* Specific Styling for Bullet Points with 3rem size */
     ul.custom-bullet {
         padding-left: 20px;
-        /* Add some left padding to create space for custom bullets */
     }
 
     ul.custom-bullet li {
@@ -46,15 +43,11 @@
 
     ul.custom-bullet li::before {
         content: "\2022";
-        /* Unicode character for a bullet point (•) */
         position: absolute;
         left: 0;
         color: #7E57C2;
-        /* Change the color of the bullet point */
         font-size: 3rem;
-        /* Set the size of the bullet point to 3rem */
         line-height: 0.5;
-        /* Adjust the line height for vertical alignment */
     }
 
 }
@@ -68,18 +61,19 @@
         margin: 10px;
         padding: 10px;
         border-radius: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
         img {
             height: auto;
             display: block;
-            border-radius: 10px;
         }
 
         div.left-img-cont {
             max-width: 35rem;
         }
 
+        .visit-link {
+            padding-left: 2rem;
+        }
 
     }
 }
